@startuml C4_L4_DB_Query_Performance
title C4 Level 4 — Database Query Optimisation & Pagination\n(ASR-PERF-02, ASR-SEC-09)

skinparam backgroundColor #FAFAFA
skinparam classAttributeIconSize 0
skinparam class {
    BackgroundColor #DDEEFF
    BorderColor #336699
    ArrowColor #003366
    FontName Arial
}
skinparam note {
    BackgroundColor #FFFDE7
    BorderColor #F9A825
}
skinparam database {
    BackgroundColor #C5CAE9
    BorderColor #5C6BC0
}

package "Node.js API — Query Layer" #EEF4FF {

    class "CoursesController\nGET /api/courses" as CC {
        + list(req, res)
        --
        page = Number(req.query.page) || 1
        limit = Number(req.query.limit) || 10
        skip = (page - 1) * limit
        CoursesService.findAll(skip, limit)
    }

    class "ClassesController\nGET /api/classes/teacher/:id" as CLC {
        + byTeacher(req, res)
        --
        teacherId = req.params.id
        ClassesService.findByTeacher(teacherId)
        [uses @@index(teacherId)]
    }

    class "MaterialsController\nGET /api/materials/class/:id" as MAC {
        + byClass(req, res)
        --
        classId = req.params.id
        MaterialsService.findByClass(classId)
        [uses @@index(classId)]
    }

    class "AssignmentsController\nGET /api/assignments/teacher/:id" as ASC {
        + byTeacher(req, res)
        --
        createdBy = req.params.id
        AssignmentsService.findByTeacher(createdBy)
        [uses @@index(createdBy)]
    }
}

package "Prisma ORM Layer\n(Parameterized Queries — ASR-SEC-09)" #E8F5E9 {

    class "prisma.course\n.findMany()" as PCC {
        + findMany({skip, take, orderBy})
        --
        SQL: SELECT * FROM "Course"
             ORDER BY "createdAt" DESC
             LIMIT $take OFFSET $skip
        → parameterized, no interpolation
    }

    class "prisma.class\n.findMany()\n@@index(teacherId)" as PCLC {
        + findMany({where: {teacherId}})
        --
        SQL: SELECT * FROM "Class"
             WHERE "teacherId" = $1
        → B-tree index on "teacherId"
        → O(log n) lookup vs O(n) scan
    }

    class "prisma.material\n.findMany()\n@@index(classId)" as PMAC {
        + findMany({where: {classId}})
        --
        SQL: SELECT * FROM "Material"
             WHERE "classId" = $1
        → B-tree index on "classId"
        → AND @@index(createdBy)
    }

    class "prisma.assignment\n.findMany()\n@@index(createdBy)" as PASC {
        + findMany({where: {createdBy}})
        --
        SQL: SELECT * FROM "Assignment"
             WHERE "createdBy" = $1
        → B-tree index on "createdBy"
    }
}

database "PostgreSQL 16\n(postgres-data volume)" as PG {
    ' Tables and their indexes
}

note right of PG
  <b>Indexes (from schema.prisma)</b>:
  Class.@@index([teacherId])
  Assignment.@@index([createdBy])
  Feedback.@@index([createdBy])
  Material.@@index([classId])
  Material.@@index([createdBy])
  Enrollment.@@unique([userId, classId])
  Submission.@@unique([assignmentId, userId])

  <b>ASR-PERF-02</b>: < 2s on 10,000+ records
  Indexes reduce query time from O(n) → O(log n)
  Pagination (page/limit) caps row transfer

  <b>ASR-SEC-09</b>: 100% parameterized queries
  Prisma compiles all findMany/findUnique/create
  to prepared statements — no raw SQL interpolation
end note

CC --> PCC : call
CLC --> PCLC : call
MAC --> PMAC : call
ASC --> PASC : call
PCC --> PG : SQL + index scan
PCLC --> PG : SQL + index seek
PMAC --> PG : SQL + index seek
PASC --> PG : SQL + index seek
@enduml
